# CHIP-8

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: macros.h
src/: cpu.c  cpu.h  display.c  display.h  main.c  memory.c  memory.h  stack.c  stack.h
tests/: CMakeLists.txt  main.c  test_cpu.c  test_display.c  test_memory.c  test_stack.c
